--- a/public/css/main.css
+++ b/public/css/main.css
@@ -4,10 +4,10 @@ td {
   border: 1px solid grey;
   border-collapse: collapse;
   padding: 2px;
-  margin-left: 50px;
-  margin-top: 10px;
-  margin-bottom: 10px;
-  width: 300px;
+}
+
+table {
+  width: 100%;
 }
 
 table tr:nth-child(odd) {
@@ -27,10 +27,11 @@ table tr:nth-child(even) {
 }
 
 .main {
-  margin-left: 50px;
-  margin-right: 50px;
+  margin-left: 30px;
+  margin-right: 30px;
   min-height: 800px;
   border: 2px solid grey;
+  padding: 1% 3% 3% 3%;
 }
 
 .input {
