--- a/public/css/main.css
+++ b/public/css/main.css
@@ -18,20 +18,38 @@ table tr:nth-child(even) {
   background-color: #ffffff;
 }
 
-.header {
-  text-align: center;
-  margin-top: 30px;
-  color: maroon;
-  font-weight: bold;
-  font-size: 200%;
+.table-header {
+  background-color: #CAEBF2;
 }
 
-.main {
-  margin-left: 50px;
-  margin-right: 50px;
+.header {
+  text-align: center;
+  margin-top: 5px;
+  color: maroon;
+  font-weight: bold;
+  font-size: 100%;
+}
+
+.description {
+  color: #01111E;
+  font: italic bold 15px/30px Georgia, serif;
+  font-weight: 100%
+}
+
+html {
+  background-color: #062F4F;
+}
+
+body {
+  background-color: #062F4F !important;
+}
+
+.myMain {
+  margin-left: 10%;
+  margin-right: 10%;
   min-height: 800px;
-  border: 2px solid grey;
-  padding: 0.5% 5% 5% 5%;
+  background-color: #f5f5f5;
+  padding: 0.5% 10%;
 }
 
 .input {
