Add catch invalid JSON error

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -18,24 +18,6 @@ table tr:nth-child(even) {
   background-color: #ffffff;
 }
 
-.table-header {
-  background-color: #CAEBF2;
-}
-
-.header {
-  text-align: center;
-  margin-top: 5px;
-  color: maroon;
-  font-weight: bold;
-  font-size: 100%;
-}
-
-.description {
-  color: #01111E;
-  font: italic bold 15px/30px Georgia, serif;
-  font-weight: 100%
-}
-
 html {
   background-color: #062F4F;
 }
@@ -52,18 +34,13 @@ body {
   padding: 0.5% 10%;
 }
 
-.input {
-  margin-left: 10px;
-  display: inline-block;
+.description {
+  color: #01111E;
+  font: italic bold 15px/30px Georgia, serif;
+  font-weight: 100%
+}
+
+.error {
   color: red;
-}
-
-.output {
-  margin-left: 10px;
-  margin-bottom: 30px;
-}
-
-#getIndex {
-  width: 60%;
-  margin-left: 20%;
+  font-weight: bold;
 }
